third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/main_arguments_various_caes.exp
module 0x42::M {
    struct Cup<T> {
        f1: T,
    }
    struct R {
    }
    struct S {
    }
    public fun eat(r: R) {
        let R{} = r;
    }
}

script {
    use 0x42::M;
    entry fun <SELF>_0<T: drop>(_s: &signer, _a0: T, _a1: vector<T>, _a2: vector<vector<T>>, _a3: M::S, _a4: M::R, _a5: M::Cup<u8>, _a6: M::Cup<T>, _a7: vector<M::S>) {
        abort 0
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ main_arguments_various_caes.move:16:15
   │
16 │     entry fun <SELF>_0<T: drop>(_s: &signer, _a0: T, _a1: vector<T>, _a2: vector<vector<T>>, _a3: M::S, _a4: M::R, _a5: M::Cup<u8>, _a6: M::Cup<T>, _a7: vector<M::S>) {
   │               ^
   │               │
   │               Unexpected '<'
   │               Expected an identifier
